tests/ui/half-open-range-patterns/range_pat_interactions2.stderr
error[E0586]: inclusive range with no end
  --> $DIR/range_pat_interactions2.rs:10:14
   |
LL |             0..=(5+1) => errors_only.push(x),
   |              ^^^ help: use `..` instead
   |
   = note: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)

error: expected one of `=>`, `if`, or `|`, found `(`
  --> $DIR/range_pat_interactions2.rs:10:17
   |
LL |             0..=(5+1) => errors_only.push(x),
   |                 ^ expected one of `=>`, `if`, or `|`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0586`.
